# shaderbake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: shader_bakery.h  shaderbake.h
source/: context.c  framebuffer.c  image.c  main.c  options.c  quad.c  shader.c
